{
    "name": "PlayerInputControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "024017f2-4aeb-44e1-8bd7-ef9bed8be6cd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "671ec2aa-540e-4003-b6ec-22dd61bf15d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "b7689110-515f-47d7-a977-77964e2d8852",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "5bd291ac-e5a9-44df-b5c4-3f1def4e47ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,SlowTap",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "505c2732-9b1c-4a4a-a85d-5e045d4ce76c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "2af206d4-0d18-466b-a421-e83db4780d81",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cb0628bc-810c-41db-8b88-267b3c978e04",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "770a27f4-2315-4602-94f8-448480be8431",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "39ffe99f-51a6-4a37-a301-7ae3bf74d333",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "106251cc-1853-40f0-865d-1e9d68fe8d86",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6a837d62-731b-4d39-a8b2-2f931983c215",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe090ddf-30f2-4988-9dcc-40eb60e63bd4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62012c61-fe5a-4323-bd24-9dfa5028fcf8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}